--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    <!-- Add this to your public/index.html file -->
+    <script src="https://cdn.jsdelivr.net/npm/nepali-calendar-react@1.0.3/dist/index.min.js"></script>
+
   </body>
 </html>
