--- a/index.html
+++ b/index.html
@@ -15,4 +15,16 @@
     <script src="https://cdn.jsdelivr.net/npm/nepali-calendar-react@1.0.3/dist/index.min.js"></script>
 
   </body>
+
+  <head>
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
+  </head>
+  
+  <body>
+    <div id="app"></div>
+  
+    <script src="src/index.js"></script>
+  </body>
+
 </html>
