--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <div id="app"></div>
   
     <script src="src/index.js"></script>
+    <!-- Add this to your public/index.html file -->
+    <script src="https://cdn.jsdelivr.net/npm/nepali-calendar-react@1.0.3/dist/index.min.js"></script>
+    
   </body>
 
 </html>
