fix: 파일 구조 수정

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <head>
     <title>Parcel Sandbox</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta charset="UTF-8" />
   </head>
   
